--- a/notebooks/Spectroscopy/Analyse_EELSs.ipynb
+++ b/notebooks/Spectroscopy/Analyse_EELSs.ipynb
@@ -5062,7 +5062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5079,7 +5079,7 @@
    ],
    "source": [
     "tags = {}\n",
-    "tags['dispersion'] = spec.energy_loss[1] - spec.energy_loss[10]   # input('ev per channel : ');\n",
+    "tags['dispersion'] = spec.energy_loss.slope\n",
     "tags['E0'] = 200 # tags['E0']#input('incident energy E0(kev) : ');\n",
     "tags['collAngle'] = 30 # tags['collAngle']\n",
     "\n",
@@ -5213,8 +5213,8 @@
    "source": [
     "def drude_simulation(dset, e, ep, ew, tnm, eb):\n",
     "    \n",
-    "    energy_scale = dset.get_spectral_dims(return_axis=True)[0].values\n",
-    "    dispersion = energy_scale[1] - energy_scale[0]  # input('ev per channel : ');\n",
+    "    energy_scale = dset.get_spectral_dims(return_axis=True)[0]\n",
+    "    dispersion = energy_scale.slope # input('ev per channel : ');\n",
     "    \n",
     "    beta = dset.metadata['collection_angle'] / 1000.  # rad\n",
     "    e0 = dset.metadata['acceleration_voltage'] / 1000.  # input('incident energy e0(kev) : ');\n",
@@ -8602,7 +8602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -8683,13 +8683,13 @@
     "            PSD += PPSD\n",
     "            \n",
     "            # convolute next order\n",
-    "        dispersion = dataset.energy_loss[1] - dataset.energy_loss[0]\n",
+    "        dispersion = dataset.energy_loss.slope\n",
     "        \n",
     "        factorZL =  Eh/dispersion*2 #, #zero_loss.sum()*(np.exp(tmfp)-1)/PSD.sum()*Eh/dispersion/4\n",
     "        #print(factorZL, Eh)\n",
     "        \n",
     "        BGDcoef = splrep(energy_scale,PSD,s=0)\n",
-    "        dispersion = dataset.energy_loss[1] - dataset.energy_loss[0]\n",
+    "        \n",
     "        cts =splev( dataset.energy_loss, BGDcoef)*factorZL #*p[1]\n",
     "        \n",
     "        #cts += zero_loss\n",
