--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-22T22:38:39.738354Z",
@@ -128,6 +128,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2025.07.0\n"
      ]
     }
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-22T22:44:51.872263Z",
@@ -221,12 +224,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf7f3e435dc147d5a190e467b2cfbdbf",
+       "model_id": "64702b904dc846e8ab9081914c3e0ef5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Dropdown(description='directory:', layout=Layout(width='90%'), options=('C:\\\\Users\\\\gduscher\\\\O…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28a1d70e187c4947a9938a3c2a762679",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Select Main', layout=Layout(grid_area='header', width='auto'), style=Button…"
       ]
      },
      "metadata": {},
@@ -238,6 +255,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e161e9868c7d43368ed3fcdb1a6b563e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pyTEMlib\u001b[38;5;241m.\u001b[39mfile_tools\u001b[38;5;241m.\u001b[39mopen_file(fileWidget\u001b[38;5;241m.\u001b[39mfile_name)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\file_tools.py:512\u001b[0m, in \u001b[0;36mopen_file\u001b[1;34m(filename, write_hdf_file, sum_frames)\u001b[0m\n\u001b[0;32m    510\u001b[0m         read_dm_annotation(dset[key])\n\u001b[0;32m    511\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m extension \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.emd\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 512\u001b[0m     read_emd_metadata(dset)\n\u001b[0;32m    513\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    514\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile type not handled yet.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\file_tools.py:330\u001b[0m, in \u001b[0;36mread_emd_metadata\u001b[1;34m(dset)\u001b[0m\n\u001b[0;32m    328\u001b[0m exp_meta[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpixel_time\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(orig\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScan\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDwellTime\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0.0\u001b[39m))\n\u001b[0;32m    329\u001b[0m exp_meta[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexposure_time\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(orig\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScan\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFrameTime\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0.0\u001b[39m))\n\u001b[1;32m--> 330\u001b[0m exp_meta[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m orig\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSample\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSampleDescription\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    331\u001b[0m exp_meta[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample_id\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m orig\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSample\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSampleId\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    332\u001b[0m detector \u001b[38;5;241m=\u001b[39m orig\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDetectors\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDetectorName\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "pyTEMlib.file_tools.open_file(fileWidget.file_name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -246,6 +300,135 @@
     "Select a dataset from the drop down value and display it with the code cell below.\n",
     "\n",
     "Here we sum the spectra of the 4 quadrants and define the detector parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e87b0f2e8c84f90a627c06bcac1af4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import SciFiReaders\n",
+    "reader = SciFiReaders.EMDReader(fileWidget.file_name)\n",
+    "d = reader.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'experiment': {'detector': 'SuperXG23',\n",
+       "  'acceleration_voltage': 200000.0,\n",
+       "  'microscope': 'Titan',\n",
+       "  'start_date_time': 1744132943,\n",
+       "  'collection_angle': 0.0,\n",
+       "  'convergence_angle': 0.029997306394484304,\n",
+       "  'probe_mode': 'convergent',\n",
+       "  'stage': {'holder': '',\n",
+       "   'position': {'x': -8.882850000000131e-06,\n",
+       "    'y': -7.359046200000003e-05,\n",
+       "    'z': -8.842238910584764e-05},\n",
+       "   'tilt': {'alpha': -0.017956972000000068, 'beta': 0.013796762563288212}},\n",
+       "  'instrument': 'Spectra4018',\n",
+       "  'current': 3.2020921599819477e-10,\n",
+       "  'exposure_time': 4.7841439999999995},\n",
+       " 'EDS': {'detector': {'layers': {13: {'thickness': 5e-08,\n",
+       "     'Z': 13,\n",
+       "     'element': 'Al'}},\n",
+       "   'SiDeadThickness': 1.3e-07,\n",
+       "   'SiLiveThickness': 0.05,\n",
+       "   'detector_area': 2.9999999999999997e-05,\n",
+       "   'energy_resolution': 125,\n",
+       "   'start_energy': 120,\n",
+       "   'start_channel': np.int64(37),\n",
+       "   'ElevationAngle': 0.31415927,\n",
+       "   'AzimuthAngle': 3.9269908169872414,\n",
+       "   'RealTime': 26.2338126,\n",
+       "   'LiveTime': 25.20496870466589}}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['Channel_000'].metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'experiment': {'detector': 'SuperXG23',\n",
+       "  'acceleration_voltage': 200000.0,\n",
+       "  'microscope': 'Titan',\n",
+       "  'start_date_time': 1744132943,\n",
+       "  'collection_angle': 0.0,\n",
+       "  'convergence_angle': 0.029997306394484304,\n",
+       "  'probe_mode': 'convergent',\n",
+       "  'stage': {'holder': '',\n",
+       "   'position': {'x': -8.882850000000131e-06,\n",
+       "    'y': -7.359046200000003e-05,\n",
+       "    'z': -8.842238910584764e-05},\n",
+       "   'tilt': {'alpha': -0.017956972000000068, 'beta': 0.013796762563288212}},\n",
+       "  'instrument': 'Spectra4018',\n",
+       "  'current': 3.2020921599819477e-10,\n",
+       "  'exposure_time': 4.7841439999999995},\n",
+       " 'EDS': {'detector': {'layers': {13: {'thickness': 5e-08,\n",
+       "     'Z': 13,\n",
+       "     'element': 'Al'}},\n",
+       "   'SiDeadThickness': 1.3e-07,\n",
+       "   'SiLiveThickness': 0.05,\n",
+       "   'detector_area': 2.9999999999999997e-05,\n",
+       "   'energy_resolution': 125,\n",
+       "   'start_energy': 120,\n",
+       "   'start_channel': np.int64(37),\n",
+       "   'ElevationAngle': 0.31415927,\n",
+       "   'AzimuthAngle': 3.9269908169872414,\n",
+       "   'RealTime': 26.2338126,\n",
+       "   'LiveTime': 25.20496870466589}},\n",
+       " 'filename': 'C:\\\\Users\\\\gduscher\\\\Downloads\\\\0007 - 20250408 EDS.emd'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fileWidget.datasets['Channel_000'].metadata"
    ]
   },
   {
@@ -587,9 +770,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "py313",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py313"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -601,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": "2",
