--- a/notebooks/Spectroscopy/Analyse_EELSs.ipynb
+++ b/notebooks/Spectroscopy/Analyse_EELSs.ipynb
@@ -3254,7 +3254,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
