--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-22T22:38:39.738354Z",
@@ -123,18 +123,7 @@
     "id": "tqjQhosvEN4G",
     "outputId": "66fe965d-d5b9-4b36-9c39-e9f8f6d0b69a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Using kinematic_scattering library version 0.2022.1.0  by G.Duscher\n",
-      "pyTEM version:  0.2025.08.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "import numpy as np\n",
@@ -251,7 +240,7 @@
     }
    ],
    "source": [
-    "fileWidget = pyTEMlib.file_tools.FileWidget()"
+    "fileWidget = pyTEMlib.file_tools.FileWidget()\n"
    ]
   },
   {
