--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -399,7 +399,7 @@
    "source": [
     "### Quantify Spectrum\n",
     "first with Bote-Salvat cross section\n",
-    "using dictionaries calculated with emtables package."
+    "using dictionaries calculated with [emtables package](https://github.com/adriente/emtables/blob/main/)."
    ]
   },
   {
