--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -78,9 +78,18 @@
     "    print('installing pyTEMlib')\n",
     "   \n",
     "    !{sys.executable} -m pip install pyTEMlib -q --upgrade\n",
-    "\n",
     "# ------------------------------\n",
     "print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21f7552-a0c1-4ddc-9339-0eb2c0d9bb8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{sys.executable} -m pip install git+https://github.com/pycroscopy/SciFiReaders/ --no-deps \n"
    ]
   },
   {
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a05abc73-c41d-41ff-80fa-f1e9c5a300c2",
    "metadata": {},
    "outputs": [
@@ -104,6 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
       "pyTEM version:  0.2025.10.0\n"
      ]
@@ -117,9 +128,13 @@
     "\n",
     "# using  pyTEMlib.eds_tools, pyTEMlib.file_tools and pyTEMlib.eels_tools (for line definitions)\n",
     "sys.path.insert(0, '..//..//')\n",
+    "sys.path.insert(0, '..//..//..//SciFiReaders//')\n",
+    "\n",
+    "    \n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
+    "import SciFiReaders\n",
+    "    \n",
     "import pyTEMlib\n",
     "\n",
     "if 'google.colab' in sys.modules:\n",
@@ -150,14 +165,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "id": "3928e873-24d0-47b3-90ff-66ffff680cd2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyTEM version:  0.2025.10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('pyTEM version: ',pyTEMlib.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1a13daae-0f41-4be4-8b94-ecca0476055b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2441f8f755ef49f296662e036e5b28f8",
+       "model_id": "437b5af27ef945b4a204d0b0d32d73ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7f1b0d608d34a18a1f811d54ce65c9b",
+       "model_id": "b765a6a7721944e08e89501465e6e548",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,16 +236,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ca3ac166-4d89-439e-86bf-a910df2202ac",
+   "execution_count": 13,
+   "id": "779d26ce-8a88-4851-9c18-b8290a69a347",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on FileWidget in module pyTEMlib.file_tools object:\n",
+      "\n",
+      "class FileWidget(sidpy.io.interface_utils.FileWidget)\n",
+      " |  FileWidget(dir_name=None, extension=['*'], sum_frames=False)\n",
+      " |\n",
+      " |  Widget to select directories or widgets from a list\n",
+      " |\n",
+      " |  Works in google colab.\n",
+      " |  The widget converts the name of the nion file to the one in Nion's swift software,\n",
+      " |  because it is otherwise incomprehensible\n",
+      " |\n",
+      " |  Attributes\n",
+      " |  ----------\n",
+      " |  dir_name: str\n",
+      " |      name of starting directory\n",
+      " |  extension: list of str\n",
+      " |      extensions of files to be listed  in widget\n",
+      " |\n",
+      " |  Methods\n",
+      " |  -------\n",
+      " |  get_directory\n",
+      " |  set_options\n",
+      " |  get_file_name\n",
+      " |\n",
+      " |  Example\n",
+      " |  -------\n",
+      " |  >>from google.colab import drive\n",
+      " |  >>drive.mount(\"/content/drive\")\n",
+      " |  >>file_list = pyTEMlib.file_tools.FileWidget()\n",
+      " |  next code cell:\n",
+      " |  >>datasets = file_list.datasets\n",
+      " |  >>dataset = file_list.selected_dataset\n",
+      " |\n",
+      " |  Method resolution order:\n",
+      " |      FileWidget\n",
+      " |      sidpy.io.interface_utils.FileWidget\n",
+      " |      builtins.object\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __init__(self, dir_name=None, extension=['*'], sum_frames=False)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  add_dataset(self, value: int = 0)\n",
+      " |      Add another dataset to the list of loaded datasets.\n",
+      " |\n",
+      " |  select_dataset(self, value: int = 0)\n",
+      " |      Select a dataset from the dropdown.\n",
+      " |\n",
+      " |  select_main(self, value: int = 0)\n",
+      " |      Select the main dataset.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from sidpy.io.interface_utils.FileWidget:\n",
+      " |\n",
+      " |  get_directory(self, directory=None)\n",
+      " |\n",
+      " |  get_file_name(self, b)\n",
+      " |\n",
+      " |  set_dir(self, value=0)\n",
+      " |\n",
+      " |  set_options(self)\n",
+      " |\n",
+      " |  update_directory_list(self, directory_name)\n",
+      " |      Update the list of files in the current directory\n",
+      " |      Cam be overwritten in child class\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from sidpy.io.interface_utils.FileWidget:\n",
+      " |\n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |\n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(fileWidget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ca3ac166-4d89-439e-86bf-a910df2202ac",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "782f6c674d1a4754b922d908a8ae8304",
+       "model_id": "32f57671fda94d0a97465f3154d8ffe7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +646,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
