update absorption for eds

--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "1a13daae-0f41-4be4-8b94-ecca0476055b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "437b5af27ef945b4a204d0b0d32d73ab",
+       "model_id": "475deef60de044bea5ef7277b3d5192e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b765a6a7721944e08e89501465e6e548",
+       "model_id": "20571e1b4f474d62bbb12c60a5304528",
        "version_major": 2,
        "version_minor": 0
       },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "dae802b1-1fa4-4c1d-9d7c-eaaaf2e26790",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "89413148",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,11 @@
   {
    "cell_type": "markdown",
    "id": "59987821",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Absorption Correction\n",
     "Lower energy lines will be more affected than higher x-ray lines.\n",
@@ -645,24 +649,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "7f9e23cc-bbb2-47d1-ae3b-7ec78532aeec",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Element: Cu, Corrected Atom%: 0.00, Corrected Weight%: 0.00\n",
-      "Element: Sr, Corrected Atom%: 22.26, Corrected Weight%: 49.70\n",
-      "Element: O, Corrected Atom%: 54.85, Corrected Weight%: 22.36\n",
-      "Element: Ti, Corrected Atom%: 22.90, Corrected Weight%: 27.94\n"
+      "Element: Sr, Corrected Atom%: 19.55, Corrected Weight%: 47.02\n",
+      "Element: O, Corrected Atom%: 60.28, Corrected Weight%: 26.47\n",
+      "Element: Ti, Corrected Atom%: 20.17, Corrected Weight%: 26.50\n"
      ]
     }
    ],
    "source": [
     "# ------ Input ----------\n",
-    "thickness_in_nm = 30\n",
+    "thickness_in_nm = 100\n",
     "# -----------------------\n",
     "pyTEMlib.eds_tools.apply_absorption_correction(spectrum, thickness_in_nm)\n",
     "for key, value in spectrum.metadata['EDS']['GUI'].items():\n",
