--- a/notebooks/usefull_equations.ipynb
+++ b/notebooks/usefull_equations.ipynb
@@ -5,9 +5,25 @@
    "id": "463c12b8",
    "metadata": {},
    "source": [
+    "<font size = \"5\"> **[pyTEMlib](0_pyTEMlib.ipynb)** </font>\n",
+    "\n",
+    "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
+    "\n",
+    "\n",
+    "<font size = \"5\"> **[pyTEMlib](0_pyTEMlib.ipynb)**, a **pycroscopy** library </font>\n",
+    "\n",
     "# Important Formulas\n",
     "\n",
-    "Collection of usefull Formulas nice to have Formulas "
+    "Notebook by \n",
+    "\n",
+    "Gerd Duscher\n",
+    "\n",
+    "Materials Science & Engineering<br>\n",
+    "Joint Institute of Advanced Materials<br>\n",
+    "The University of Tennessee, Knoxville\n",
+    "\n",
+    "\n",
+    "Collection of usefull Formulas"
    ]
   },
   {
@@ -21,23 +37,20 @@
      "output_type": "stream",
      "text": [
       "using config dir\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data fluorescent_yield.csv\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data fluorescent_yield.xlsx\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data k-factors-Spectra300UTK200keV.csv\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data k_factors_Bruker_15keV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data k_factors_Thermo_200keV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data old\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data xrays_X_section_100kV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data xrays_X_section_200kV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data xrays_X_section_300kV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data xrays_X_section_60kV.json\n",
-      "c:\\Users\\gduscher\\OneDrive - University of Tennessee\\GitHub\\pyTEMlib\\pyTEMlib\\data XRPA\n"
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data fluorescent_yield.csv\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data fluorescent_yield.xlsx\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data k_factors_Bruker_15keV.json\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data k_factors_Thermo_200keV.json\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_100kV.json\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_200kV.json\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_300kV.json\n",
+      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_60kV.json\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'0.2025.11.4'"
+       "'0.2025.11.3'"
       ]
      },
      "execution_count": 1,
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "35a6b103",
    "metadata": {},
    "outputs": [
@@ -86,7 +99,7 @@
    ],
    "source": [
     "# --- Input  ----\n",
-    "e0 = 300000  # acceleration voltage in eV\n",
+    "e0 = 60000  # acceleration voltage in eV\n",
     "# ---------------\n",
     "\n",
     "def get_wavelength(e0: float) -> float:\n",
