update and test probe

--- a/notebooks/Spectroscopy/Analyse_EELS.ipynb
+++ b/notebooks/Spectroscopy/Analyse_EELS.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-25T17:48:41.105440Z",
@@ -165,9 +165,7 @@
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft          # File input/ output library\n",
     "from pyTEMlib import eels_tools  \n",
-    "import pyTEMlib.info_widget3\n",
-    "import pyTEMlib.eels_dialog\n",
-    "import pyTEMlib.peak_dialog\n",
+    "# import pyTEMlib.info_widget3\n",
     "\n",
     "import pyTEMlib.kinematic_scattering as ks         # Kinematic sCattering Library\n",
     "                             # Atomic form factors from Kirklands book\n",
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +309,7 @@
    "source": [
     "if 'google.colab' in sys.modules:\n",
     "    drive.mount(\"/content/drive\")\n",
-    "infoWidget= pyTEMlib.info_widget3.EELSWidget()\n"
+    "# infoWidget= pyTEMlib.info_widget3.EELSWidget()\n"
    ]
   },
   {
