--- a/notebooks/usefull_equations.ipynb
+++ b/notebooks/usefull_equations.ipynb
@@ -33,24 +33,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using config dir\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data fluorescent_yield.csv\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data fluorescent_yield.xlsx\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data k_factors_Bruker_15keV.json\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data k_factors_Thermo_200keV.json\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_100kV.json\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_200kV.json\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_300kV.json\n",
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyTEMlib\\data xrays_X_section_60kV.json\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'0.2025.11.3'"
+       "'0.2025.12.0'"
       ]
      },
      "execution_count": 1,
@@ -65,7 +50,7 @@
     "import scipy \n",
     "\n",
     "import pyTEMlib\n",
-    "pyTEMlib.__version__\n"
+    "pyTEMlib.__version__"
    ]
   },
   {
@@ -85,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "35a6b103",
    "metadata": {},
    "outputs": [
@@ -93,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavelength is 1.97 pm for  300 keV\n"
+      "wavelength is 4.87 pm for  60 keV\n"
      ]
     }
    ],
@@ -127,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e8dfa007",
    "metadata": {},
    "outputs": [
@@ -138,7 +123,8 @@
       "Help on function get_wavelength in module __main__:\n",
       "\n",
       "get_wavelength(e0: float) -> float\n",
-      "    get deBroglie wavelength of electron accelerated by energy (in eV) e0\n",
+      "    get deBroglie wavelength of electron accelerated by energy e0 (in eV)\n",
+      "\n",
       "    Parameters\n",
       "    ----------\n",
       "    e0 : float\n",
