--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -893,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
