update links notebook

--- a/notebooks/Diffraction/D1_Diffraction_Rings.ipynb
+++ b/notebooks/Diffraction/D1_Diffraction_Rings.ipynb
@@ -129,6 +129,7 @@
     "%matplotlib  widget\n",
     "import os\n",
     "import sys\n",
+    "single\n",
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -1110,8 +1111,6 @@
     "### Atomic form factor\n",
     "\n",
     "If we look at the scattering power of a single atom that deflects an electron:\n",
-    "    \n",
-    "![Single atom scattering](images/scattering_single_atom.jpg)\n",
     "\n",
     "See [Atomic Form Factor](CH2_02-Atomic_Form_Factor.ipynb) for details"
    ]
@@ -1292,8 +1291,6 @@
    "metadata": {},
    "source": [
     "## Ring Pattern\n",
-    "<img src=\"images/CL375.jpg\" alt=\"Bragg's Law\" width=\"300\" >\n",
-    "<img src=\"images/ProfileOfCL375.jpg\" alt=\"Bragg's Law\" width=\"300\" >\n",
     "\n",
     "**Ring Pattern:**\n",
     "- The profile of a ring diffraction pattern (of a polycrystalline sample) is very close to what a you are used from X-ray diffraction.\n",
