--- a/notebooks/Spectroscopy/EDS-SI.ipynb
+++ b/notebooks/Spectroscopy/EDS-SI.ipynb
@@ -5,11 +5,11 @@
    "id": "90e0cd4a-149a-43e5-808f-b32b27d7ca5a",
    "metadata": {},
    "source": [
-    "<font size = \"5\"> **EELS_Tools:  [Spectroscopy](../4_EELS_Tools.ipynb)** </font>\n",
+    "<font size = \"5\"> **EDS_Tools:  [Spectroscopy](../4_EELS_Tools.ipynb)** </font>\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
-    "# Analysis of EDS Spectra\n",
+    "# Analysis of EDS Spectrum Images\n",
     "<br>\n",
     "\n",
     "[<img src=https://www.coeuscreativegroup.com/wp-content/uploads/2020/04/download-button.png, width=125>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/Spectroscopy/EDS.ipynb) \n",
@@ -1648,7 +1648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
