--- a/notebooks/0_pyTEMlib.ipynb
+++ b/notebooks/0_pyTEMlib.ipynb
@@ -23,10 +23,16 @@
     "\n",
     "Usage of the  Tools of [pyTEMlib](_pyTEMlib.ipynb)\n",
     "\n",
+    "PyTEMlib enables model-based analysis of microscopy data.\n",
+    "\n",
+    "That means that we fit a function to the data and the fitting parameter have a quantitative and physical meaning.\n",
+    "\n",
+    "This package is divided in 4 major parts:\n",
+    "\n",
     "# [Introduction](1_Introduction.ipynb)\n",
-    "# [Diffraction Tools](2_Diffraction_Tools.ipynb)\n",
+    "# [Diffraction Tools](2.ipynb)\n",
     "# [Image Tools](3_Image_Tools.ipynb)\n",
-    "# [EELS_ToolS](4_EELS_Tools.ipynb)"
+    "# [Spectroscopy_Tools](4_Spectroscopy_Tools.ipynb)"
    ]
   },
   {
@@ -63,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": "1",
