--- a/notebooks/Imaging/I1_Adaptive_Fourier_Filter.ipynb
+++ b/notebooks/Imaging/I1_Adaptive_Fourier_Filter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\"> **[Image Tools](2_Image_Tools.ipynb)** </font>\n",
+    "<font size = \"5\"> **[Image Tools](../3_Image_Tools.ipynb)** </font>\n",
     "\n",
     "<hr style=\"height:2px;border-top:4px solid #FF8200\" />\n",
     "\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-28T17:26:31.896075100Z",
@@ -104,9 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "pyTEMlib version:  0.2025.12.1\n"
+      "pyTEMlib version:  0.2026.1.0\n"
      ]
     }
    ],
@@ -1120,9 +1118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "p314",
    "language": "python",
-   "name": "python3"
+   "name": "p314"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1134,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.2"
   },
   "toc": {
    "base_numbering": 1,
