fixed HOLZ ines

--- a/notebooks/2_Diffraction_Tools.ipynb
+++ b/notebooks/2_Diffraction_Tools.ipynb
@@ -30,7 +30,8 @@
     "\n",
     "## [Ring Pattern](Diffraction/D1_Diffraction_Rings.ipynb)\n",
     "## [Spot Pattern](Diffraction/D2_Diffraction_Spots.ipynb)\n",
-    "## [Ronchigram](Diffraction/D3_Ronchigram.ipynb)"
+    "## [HOLZ and Kikuchi Pattern](Diffraction/D3_Diffraction_Kikuchi_HOLZ.ipynb)\n",
+    "## [Ronchigram](Diffraction/D4_Ronchigram.ipynb)"
    ]
   },
   {
