--- a/notebooks/Diffraction/D3_Diffraction_Kikuchi_HOLZ.ipynb
+++ b/notebooks/Diffraction/D3_Diffraction_Kikuchi_HOLZ.ipynb
@@ -872,7 +872,8 @@
    "metadata": {},
    "source": [
     "## Plot Kikuchi Pattern\n",
-    "With the knowledge that the slope $m = \\tan(\\phi)$\n",
+    "With the knowledge that the slope of a line is  $m = \\tan(\\phi)$,\n",
+    "\n",
     "we can plot the  perpendicular bisector of the line from origin to the Bragg peaks which are the Kikuchi lines."
    ]
   },
